# snackjob

./: LICENSE  README.md  app.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yaml
snackjob-backend/: Dockerfile  app.py  docker-compose.yml  pyproject.toml  requirements.txt
snackjob-backend/utils/: experiences.py  positions.py  reinforcement.py  snackjob.py
snackjob-backend/utils/dict/: experiences.py  positions.py  reinforcement.py  society.py  tech.py
snackjob-frontend/: package-lock.json  package.json
snackjob-frontend/components/: Footer.js  Header.js  Layout.js
snackjob-frontend/pages/: _app.js  _document.js  index.js
snackjob-frontend/pages/snackjob/: [id].js
snackjob-frontend/styles/: globals.css
