[tool.poetry]
name = "Snack Job"
version = "0.1.0"
description = "Generate snack job position"
authors = ["Schrodinger Hat <us@schrodinger-hat.it>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
